--- a/digitala.html
+++ b/digitala.html
@@ -13,14 +13,14 @@
     <style>
         :root {
             /* Vibrant colorful theme */
-            --white: #ffffff;
-            --black: #111111;
+            --white: #fbf5fb;
+            --black: #0d0711;
             --muted: #555555;
-            --accent: #6b21a8;
+            --accent: #460f65;
             /* purple */
-            --accent-2: #460f65;
+            --accent-2: #6b21a8;
             /* coral */
-            --accent-3: #00b4d8;
+            --accent-3: #ae57d0;
             /* cyan */
             --accent-4: #ffd166;
             /* warm yellow */
@@ -1120,7 +1120,7 @@
             <div class="carousel-wrap" style="margin-top:8px;">
                 <div class="services-wrap carousel" id="servicesWrap" aria-hidden="false">
                     <div class="service-tile" data-service="visual-identity" role="button" tabindex="0"
-                        style="background-image: linear-gradient(180deg, rgba(0,0,0,0.18), rgba(0,0,0,0.28)), url('https://imgur.com/Gcpk5j1.png');">
+                        style="background-image: linear-gradient(180deg, rgba(0,0,0,0.18), rgba(0,0,0,0.28)), url('https://imgur.com/wLSM9PG.png');">
                         <div>
                             <div class="service-title-large">Visual Branding & Identity Design</div>
                             <div class="service-sub">Visual Identity · Social Media Branding Kit & more</div>
@@ -1128,7 +1128,7 @@
                     </div>
 
                     <div class="service-tile" data-service="frontend-websites" role="Button" tabindex="0"
-                        style="background-image: linear-gradient(180deg, rgba(0,0,0,0.14), rgba(0,0,0,0.3)), url('https://imgur.com/LBsXXmI.png');">
+                        style="background-image: linear-gradient(180deg, rgba(0,0,0,0.14), rgba(0,0,0,0.3)), url('https://imgur.com/tLOhzvm.png');">
                         <div>
                             <div class="service-title-large">Full Stack Web Development</div>
                             <div class="service-sub">Frontend Development · Backend Development</div>
@@ -1136,7 +1136,7 @@
                     </div>
 
                     <div class="service-tile" data-service="extra-services" role="button" tabindex="0"
-                        style="background-image: linear-gradient(180deg, rgba(0,0,0,0.12), rgba(0,0,0,0.28)), url('https://imgur.com/7Zel25b.png');">
+                        style="background-image: linear-gradient(180deg, rgba(0,0,0,0.12), rgba(0,0,0,0.28)), url('https://imgur.com/YitXH26.png');">
                         <div>
                             <div class="service-title-large">Career & Study Support</div>
                             <div class="service-sub">CV · Projects · Presentations · Assignments & more</div>
@@ -1162,7 +1162,7 @@
             <div class="carousel-wrap" style="margin-top:8px;">
                 <div class="graphics-file-grid carousel">
                     <div class="file-card" data-modal="project-modal-1"
-                        style="background-image: linear-gradient(180deg, rgba(0,0,0,0.12), rgba(0,0,0,0.36)), url('https://imgur.com/sazMX5w.jpg');"
+                        style="background-image: linear-gradient(180deg, rgba(0,0,0,0.12), rgba(0,0,0,0.36)), url('https://imgur.com/2i3Mvmi.jpg');"
                         role="button" tabindex="0">
                         <div class="file-content">
                             <div class="file-title">Visual Identity Project</div>
@@ -1171,7 +1171,7 @@
                     </div>
 
                     <div class="file-card" data-modal="project-modal-2"
-                        style="background-image: linear-gradient(180deg, rgba(0,0,0,0.12), rgba(0,0,0,0.36)), url('https://imgur.com/QYBRaU8.jpg');"
+                        style="background-image: linear-gradient(180deg, rgba(0,0,0,0.12), rgba(0,0,0,0.36)), url('https://imgur.com/8e1n4uP.jpg');"
                         role="button" tabindex="0">
                         <div class="file-content">
                             <div class="file-title">Menu Project</div>
@@ -1180,7 +1180,7 @@
                     </div>
 
                     <div class="file-card" data-modal="project-modal-3"
-                        style="background-image: linear-gradient(180deg, rgba(0,0,0,0.12), rgba(0,0,0,0.36)), url('https://imgur.com/0BO1tFS.jpg');"
+                        style="background-image: linear-gradient(180deg, rgba(0,0,0,0.12), rgba(0,0,0,0.36)), url('https://imgur.com/LuwA9Ii.jpg');"
                         role="button" tabindex="0">
                         <div class="file-content">
                             <div class="file-title">Product Photography & Digital Marketing Project</div>
